# loc-authority-tools

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
loc_authority_tools/: app.py  database.sql  db.py  full_download.py  ingest_loc_names.py  naco.py  name_parser.py  seed_db.py  tokenize_names.py  tokenizer.py  works_lookup.py
