[tool.poetry]
name = "loc-authority-tools"
version = "0.1.0"
description = ""
authors = ["Sarang Joshi <sarangjoshi@nypl.org>"]
readme = "README.md"
packages = [{include = "loc_authority_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
nameparser = "1.1.3"
psycopg = "3.1.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
