[tool.poetry]
name = "loc-authority-tools"
version = "0.1.0"
description = ""
authors = ["Sarang Joshi <sarangjoshi@nypl.org>"]
readme = "README.md"
packages = [{include = "loc_authority_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "3.0.3"
gunicorn = "22.0.0"
nameparser = "1.1.3"
psycopg = "3.1.19"
requests = "2.32.3"
thefuzz = "0.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
